fix: slider标签会被外部text-align影响的问题

--- a/src/NumberSlider/index.less
+++ b/src/NumberSlider/index.less
@@ -27,6 +27,7 @@
 
   .slid-body {
     position: relative;
+    text-align: left;
   }
 
   .slid-body .number-control-value {
